[gd_scene load_steps=6 format=2]

[ext_resource path="res://tanks/player/PlayerHUDFont.tres" type="FontFile" id=1]
[ext_resource path="res://main_menu/UIResolutionSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_menu/UISettingCheckbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_menu/UIVideoSettings.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.219608, 0.278431, 1 )
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[node name="UIVideoSettings" type="Panel"]
offset_right = 517.0
offset_bottom = 378.0
theme_override_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 514.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 48.0
offset_right = 514.0
offset_bottom = 52.0

[node name="UIResolutionSelector" parent="VBoxContainer" instance=ExtResource( 2 )]
offset_top = 56.0
offset_right = 514.0
offset_bottom = 106.0

[node name="UIFullscreenCheckbox" parent="VBoxContainer" instance=ExtResource( 3 )]
offset_top = 110.0
offset_right = 514.0
offset_bottom = 162.0
title = "Full Screen"

[node name="UIVsyncCheckbox" parent="VBoxContainer" instance=ExtResource( 3 )]
offset_top = 166.0
offset_right = 514.0
offset_bottom = 218.0
title = "VSync"

[node name="Spacer" type="Control" parent="VBoxContainer"]
offset_top = 222.0
offset_right = 514.0
offset_bottom = 322.0
custom_minimum_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 326.0
offset_right = 514.0
offset_bottom = 376.0
theme_override_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 247.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 1 )
text = "OK"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 267.0
offset_right = 514.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 1 )
text = "Cancel"

[connection signal="resolution_changed" from="VBoxContainer/UIResolutionSelector" to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="toggled" from="VBoxContainer/UIFullscreenCheckbox" to="." method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIVsyncCheckbox" to="." method="_on_UIVsyncCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
